--- a/.gitignore
+++ b/.gitignore
@@ -22,10 +22,10 @@ engine/engine.iml
 # The /.* already ignores the . files in the root folder
 # Adding the ** ensures that subfolders are included
 /.checkstyle
-**.project
-**.classpath
-**.settings/
-**bin/
+.project
+.classpath
+.settings/
+bin/
 
 # Ignore Linux
 *.directory
